Correct FFmpeg start time and duration impl on input source and MediaAnalyser #114